# grpc-kos

./: .gitignore  .gitmodules  CHANGELOG.md  CLA.md  CMakeLists.txt  CONTRIBUTING.md  INSTALL.md  LICENSE  NOTICE.txt  README.md  cross-build-kos.sh
.github/: CODEOWNERS  issue_template.md  pull_request_template.md
cmake/: protobuf.cmake
examples/cpp/cmake/: common.cmake
examples/kos/helloworld/: .gitignore  CMakeLists.txt  README.md  build.sh  cross-build.sh
examples/kos/helloworld/client/: CMakeLists.txt  build.sh  cross-build.sh
examples/kos/helloworld/client/einit/: CMakeLists.txt
examples/kos/helloworld/client/einit/src/: init.yaml.in  security.psl
examples/kos/helloworld/client/resources/: GreeterClient.edl
examples/kos/helloworld/client/resources/ramfs/etc/: dhcpcd.conf  hosts
examples/kos/helloworld/client/src/: greeter_client.cc  greeter_client.h  main.cc
examples/kos/helloworld/einit/: CMakeLists.txt
examples/kos/helloworld/einit/src/: client.init.yaml.in  security.psl.in  server.init.yaml.in
examples/kos/helloworld/libraries/: CMakeLists.txt
examples/kos/helloworld/libraries/hello_world_proto/: CMakeLists.txt
examples/kos/helloworld/libraries/utility_lib/: CMakeLists.txt  CommandLineArg.cc  CommandLineArg.h  FileUtility.cc  FileUtility.h
examples/kos/helloworld/resources/edl/: GreeterClient.edl  GreeterServer.edl
examples/kos/helloworld/resources/hdd/etc/: dhcpcd.conf  hosts
examples/kos/helloworld/server/: CMakeLists.txt  build.sh  cross-build.sh
examples/kos/helloworld/server/einit/: CMakeLists.txt
examples/kos/helloworld/server/einit/src/: init.yaml.in  security.psl
examples/kos/helloworld/server/resources/: GreeterServer.edl
examples/kos/helloworld/server/src/: greeter_service_impl.cc  greeter_service_impl.h  main.cc
include/grpc/event_engine/: port.h
include/grpc/impl/codegen/: port_platform.h
kos/: cross-build.sh  host-build.sh  run-tests.sh
src/core/lib/iomgr/: port.h  tcp_posix.cc
src/core/tsi/alts/crypt/: aes_gcm.cc  gsec.cc
src/core/tsi/alts/zero_copy_frame_protector/: alts_grpc_integrity_only_record_protocol.cc  alts_grpc_privacy_integrity_record_protocol.cc  alts_grpc_record_protocol_common.cc  alts_iovec_record_protocol.cc
test/core/end2end/: h2_ssl_session_reuse_test.cc
test/core/iomgr/: resolve_address_test.cc  tcp_client_posix_test.cc
test/core/security/: grpc_authorization_policy_provider_test.cc  grpc_tls_certificate_distributor_test.cc  grpc_tls_certificate_provider_test.cc  grpc_tls_credentials_options_test.cc  tls_security_connector_test.cc
test/core/slice/: slice_test.cc
test/core/transport/chttp2/: remove_stream_from_stalled_lists_test.cc  settings_timeout_test.cc
test/core/tsi/: crl_ssl_transport_security_test.cc
test/core/tsi/alts/fake_handshaker/: fake_handshaker_server.cc
test/core/util/: fake_udp_and_tcp_server.cc  test_config.cc
test/core/xds/: certificate_provider_store_test.cc
test/cpp/common/: time_jump_test.cc
test/cpp/end2end/: channelz_service_test.cc  grpc_authz_end2end_test.cc  tls_key_export_test.cc
test/cpp/end2end/xds/: xds_end2end_test.cc  xds_end2end_test_lib.cc
test/cpp/naming/: cancel_ares_query_test.cc
test/cpp/server/: authorization_policy_provider_test.cc  server_request_call_test.cc
test/cpp/util/: grpc_tool_test.cc
test/kos/cmake/: add_gtest.cmake  disabled_cpp_tests.cmake  tests.cmake
test/kos/resources/etc/: dhcpcd.conf  hosts  resolv.conf
